--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import Footer from '../components/Footer.astro';
     <meta name="description" content="Terrenos campestres en Nocaima y Nimaima con alta valorización. Compra directa, vistas naturales y facilidades de pago." />
     <meta property="og:title" content="B&Y Terrenos y Proyectos" />
     <meta property="og:description" content="Invierte en terrenos rurales en Cundinamarca. Excelente ubicación y precios negociables." />
-    <meta property="og:image" content="/images/og-image.jpg" />
+    <meta property="og:image" content="assets/img/hola.jpg" />
     <meta property="og:type" content="website" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
